[tool.poetry]
name = "tibia-ipchanger"
version = "0.1.2"
description = "Command-line IP changer for Tibia clients (Linux only)"
license = "MIT"
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ranisalt/tibia-ipchanger"
packages = [{ include = "ipchanger" }]

[tool.poetry.dependencies]
python = "^3.9"
pyelftools = "^0.28"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pytest = "^7.1.1"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
ipchanger = "ipchanger:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
