[tool.poetry]
name = "tibia-ipchanger"
version = "0.1.2"
description = "Command-line IP changer for Tibia clients (Linux only)"
license = "MIT"
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ranisalt/tibia-ipchanger"
packages = [{ include = "ipchanger" }]

[tool.poetry.dependencies]
python = "^3.9"
pyelftools = "^0.29"

[tool.poetry.scripts]
ipchanger = "ipchanger:run"

[tool.poetry.group.dev.dependencies]
black = { version = "*", allow-prereleases = true }
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.1.0"
ruff = "^0.0.285"

[tool.pytest.ini_options]
addopts = "--cov=ocelot --cov-report=term-missing --doctest-modules"

[tool.ruff]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
